--- a/common/wofi/.config/wofi/style.css
+++ b/common/wofi/.config/wofi/style.css
@@ -1,5 +1,5 @@
 window {
-  font-family: SF Pro;
+  font-family: FiraCode Nerd Font;
   font-weight: lighter;
   font-size: 16px;
   border: 1px solid #313244;
